--- a/Explore_model_outcomes.ipynb
+++ b/Explore_model_outcomes.ipynb
@@ -47,7 +47,7 @@
         "id": "sQlxVeQWT2u3",
         "outputId": "735d5771-57fe-4f95-8730-c61d9d80fc16"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,8 +87,61 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install ema-workbench\n",
-        "\n",
+        "pip install ema-workbench"
+      ],
+      "metadata": {
+        "id": "3AHMXCdHZ1Re",
+        "outputId": "4f31fe50-1f56-4d9e-8318-7e8337c8f1ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting ema-workbench\n",
+            "  Downloading ema_workbench-2.3.0-py3-none-any.whl (24.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 24.6 MB 86.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.21.6)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.0.2)\n",
+            "Requirement already satisfied: seaborn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.11.2)\n",
+            "Collecting salib>=1.4.6\n",
+            "  Downloading salib-1.4.6.1-py3-none-any.whl (758 kB)\n",
+            "\u001b[K     |████████████████████████████████| 758 kB 51.9 MB/s \n",
+            "\u001b[?25hCollecting platypus-opt\n",
+            "  Downloading Platypus_Opt-1.1.0-py3-none-any.whl (76 kB)\n",
+            "\u001b[K     |████████████████████████████████| 76 kB 6.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: statsmodels in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.12.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (4.64.1)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.3.5)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (3.2.2)\n",
+            "Collecting multiprocess\n",
+            "  Downloading multiprocess-0.70.14-py38-none-any.whl (132 kB)\n",
+            "\u001b[K     |████████████████████████████████| 132 kB 46.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy>=1.7.3 in /usr/local/lib/python3.8/dist-packages (from salib>=1.4.6->ema-workbench) (1.7.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (3.0.9)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (1.4.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (0.11.0)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas->ema-workbench) (2022.6)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib->ema-workbench) (1.15.0)\n",
+            "Requirement already satisfied: dill>=0.3.6 in /usr/local/lib/python3.8/dist-packages (from multiprocess->salib>=1.4.6->ema-workbench) (0.3.6)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn->ema-workbench) (3.1.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.8/dist-packages (from scikit-learn->ema-workbench) (1.2.0)\n",
+            "Requirement already satisfied: patsy>=0.5 in /usr/local/lib/python3.8/dist-packages (from statsmodels->ema-workbench) (0.5.3)\n",
+            "Installing collected packages: multiprocess, salib, platypus-opt, ema-workbench\n",
+            "Successfully installed ema-workbench-2.3.0 multiprocess-0.70.14 platypus-opt-1.1.0 salib-1.4.6.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from ema_workbench.analysis import prim\n",
         "from ema_workbench.analysis import feature_scoring\n",
         "\n",
@@ -119,26 +172,32 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 135
         },
         "id": "dVUkiQKsMFP4",
-        "outputId": "66a9fbed-13f6-4d60-987d-88940df086b0"
+        "outputId": "342701da-5115-4c0a-9840-de674839f46a"
       },
       "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.8/dist-packages/ema_workbench/em_framework/evaluators.py:58: UserWarning: ipyparallel not installed - IpyparalleEvaluator not available\n",
-            "  warnings.warn(\"ipyparallel not installed - IpyparalleEvaluator not available\")\n",
-            "/usr/local/lib/python3.8/dist-packages/statsmodels/tsa/base/tsa_model.py:7: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-            "  from pandas import (to_datetime, Int64Index, DatetimeIndex, Period,\n",
-            "/usr/local/lib/python3.8/dist-packages/statsmodels/tsa/base/tsa_model.py:7: FutureWarning: pandas.Float64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-            "  from pandas import (to_datetime, Int64Index, DatetimeIndex, Period,\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-147e688cb863>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pip install ema-workbench\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R25EetGzZ0fO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -152,7 +211,7 @@
         "id": "huhoKx_lQLsO",
         "outputId": "795c7713-9ffb-4aa6-af07-dca2f22d6e33"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +243,7 @@
         "id": "BwRtv3l6UluO",
         "outputId": "91146caf-f2cf-443c-f613-c7cb4b075702"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +281,7 @@
       "metadata": {
         "id": "LUq9V03JS8SB"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +293,7 @@
       "metadata": {
         "id": "dSzBUanyM3ug"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +317,7 @@
         "id": "Et1DzfbbUk0F",
         "outputId": "9d69f707-efd6-4da8-a830-94b8b4d87bb5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -299,7 +358,7 @@
         "id": "EqsRiRPEUuG3",
         "outputId": "96302d05-1a3e-4bd2-a97d-b992fd2ccfeb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,7 +419,7 @@
         "id": "cN-QSwW9U_EK",
         "outputId": "a6dc2217-1085-4d8c-fc82-34eb5ae08855"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -409,7 +468,7 @@
         "id": "KmIBPXrUVBSD",
         "outputId": "d4100271-13d7-4999-dfc4-08415aed6113"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -478,7 +537,7 @@
         "id": "fjXC0GkLVOyn",
         "outputId": "10e04642-9927-4098-8b2c-39268c4b5a43"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -527,7 +586,7 @@
         "id": "LH1mr-jGVSsf",
         "outputId": "ae34efe3-a4cb-4cf8-a1af-9568de645d8a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +620,7 @@
       "metadata": {
         "id": "K1EQknXHVbVM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +636,7 @@
         "id": "BnbuG8BAVdEC",
         "outputId": "11b05e2d-f5e2-4d01-8cde-384132fb9359"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +678,7 @@
         "id": "H4b1CcWAVedY",
         "outputId": "28fffe9b-99c7-4c33-cb66-84df75b40ae7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +741,7 @@
         "id": "MgUUbW_nVf_U",
         "outputId": "51d7f7d4-0b02-4ff2-9e2a-b7c95662f0fa"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +799,7 @@
         "id": "ap4gJcXxViAc",
         "outputId": "3e8a88ca-57e9-42d7-b26e-d45da87e7d96"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,7 +840,7 @@
         "id": "xmL8xL2mVoBt",
         "outputId": "f00c2b4c-8335-4158-c7e8-ed8775af230e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
