--- a/Explore_model_outcomes.ipynb
+++ b/Explore_model_outcomes.ipynb
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sQlxVeQWT2u3",
-        "outputId": "48ab8868-4513-4d5f-ad83-9b913c985d05"
+        "outputId": "7139e10f-2316-4110-eab3-8b3336082e7e"
       },
       "execution_count": 1,
       "outputs": [
@@ -55,7 +55,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pandas==1.4.1\n",
             "  Downloading pandas-1.4.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.7 MB)\n",
-            "\u001b[K     |████████████████████████████████| 11.7 MB 4.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 11.7 MB 4.9 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.8/dist-packages (from pandas==1.4.1) (1.21.6)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.8/dist-packages (from pandas==1.4.1) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.8/dist-packages (from pandas==1.4.1) (2022.6)\n",
@@ -77,7 +77,7 @@
       ],
       "metadata": {
         "id": "3AHMXCdHZ1Re",
-        "outputId": "403d8c09-2759-4546-bd4f-9bfdc4af260c",
+        "outputId": "3b5b2b1c-db4e-4587-d4bf-c75d477f5165",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -91,27 +91,27 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting ema-workbench\n",
             "  Downloading ema_workbench-2.3.0-py3-none-any.whl (24.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 24.6 MB 2.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 24.6 MB 1.8 MB/s \n",
             "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.4.1)\n",
-            "Requirement already satisfied: seaborn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.11.2)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.0.2)\n",
-            "Collecting salib>=1.4.6\n",
-            "  Downloading salib-1.4.6.1-py3-none-any.whl (758 kB)\n",
-            "\u001b[K     |████████████████████████████████| 758 kB 46.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.21.6)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (4.64.1)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (3.2.2)\n",
-            "Requirement already satisfied: statsmodels in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.12.2)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.0.2)\n",
             "Collecting platypus-opt\n",
             "  Downloading Platypus_Opt-1.1.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[K     |████████████████████████████████| 76 kB 4.7 MB/s \n",
-            "\u001b[?25hCollecting multiprocess\n",
+            "\u001b[K     |████████████████████████████████| 76 kB 6.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: seaborn in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.11.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (4.64.1)\n",
+            "Collecting salib>=1.4.6\n",
+            "  Downloading salib-1.4.6.1-py3-none-any.whl (758 kB)\n",
+            "\u001b[K     |████████████████████████████████| 758 kB 60.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (1.21.6)\n",
+            "Requirement already satisfied: statsmodels in /usr/local/lib/python3.8/dist-packages (from ema-workbench) (0.12.2)\n",
+            "Collecting multiprocess\n",
             "  Downloading multiprocess-0.70.14-py38-none-any.whl (132 kB)\n",
-            "\u001b[K     |████████████████████████████████| 132 kB 51.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 132 kB 58.0 MB/s \n",
             "\u001b[?25hRequirement already satisfied: scipy>=1.7.3 in /usr/local/lib/python3.8/dist-packages (from salib>=1.4.6->ema-workbench) (1.7.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (3.0.9)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (1.4.4)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (0.11.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (3.0.9)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->ema-workbench) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.8/dist-packages (from pandas->ema-workbench) (2022.6)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib->ema-workbench) (1.15.0)\n",
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dVUkiQKsMFP4",
-        "outputId": "014dcd03-a2ca-4371-d498-408e7ad9f37c"
+        "outputId": "78ba4697-ed54-45a2-de77-6896f9eb217a"
       },
       "execution_count": 3,
       "outputs": [
@@ -189,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "huhoKx_lQLsO",
-        "outputId": "7cfdc57e-caac-4835-82bb-4b62e55df249"
+        "outputId": "1379db2d-14ab-4db1-f25d-b374be04407e"
       },
       "execution_count": 4,
       "outputs": [
@@ -199,11 +199,11 @@
           "text": [
             "Cloning into 'ABM_Value_Change'...\n",
             "warning: redirecting to https://github.com/tristandewildt/ABM_Value_Change.git/\n",
-            "remote: Enumerating objects: 40, done.\u001b[K\n",
-            "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (39/39), done.\u001b[K\n",
-            "remote: Total 40 (delta 9), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (40/40), done.\n"
+            "remote: Enumerating objects: 47, done.\u001b[K\n",
+            "remote: Counting objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
+            "remote: Total 47 (delta 11), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (47/47), done.\n"
           ]
         }
       ]
@@ -227,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BwRtv3l6UluO",
-        "outputId": "3977bcc7-bc8c-40b1-da82-df81a4169950"
+        "outputId": "803fe97d-5b94-4ab1-c97b-81a525d3256d"
       },
       "execution_count": 5,
       "outputs": [
@@ -236,9 +236,10 @@
           "name": "stdout",
           "text": [
             "Experiments to choose from:\n",
-            "   - Output_file_results_256_runs_model_version_v33_Inevitability_of_values_no_variables_changing_with_values\n",
+            "   - Output_file_results_256_runs_model_version_v34_Lock-in_variables_changing_with_values\n",
             "   - Output_file_results_256_runs_model_version_v33_Resistance_to_change_variables_changing_with_values\n",
-            "   - Output_file_results_256_runs_model_version_v33_Resistance_to_change_value_memory_fixed\n"
+            "   - Output_file_results_256_runs_model_version_v33_Resistance_to_change_value_memory_fixed\n",
+            "   - Output_file_results_256_runs_model_version_v33_Inevitability_of_values_no_variables_changing_with_values\n"
           ]
         }
       ]
@@ -269,19 +270,7 @@
       "metadata": {
         "id": "LUq9V03JS8SB"
       },
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_experiments =[\"Inevitability_of_values\", \"Lock-in\", \"Resistance_to_change\",\"Moral_revolutions\"]\n",
-        "list_settings = [\"no_variables_changing_with_values\", \"variables_changing_with_values\", \"no_variables_changing_without_values\", \"variables_changing_without_values\"]"
-      ],
-      "metadata": {
-        "id": "dSzBUanyM3ug"
-      },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,7 +294,7 @@
         "id": "Et1DzfbbUk0F",
         "outputId": "d2527488-b282-4abc-a392-04b129c60092"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -457,7 +446,7 @@
         "id": "KmIBPXrUVBSD",
         "outputId": "70d01da2-83eb-463f-ce95-827e8f1b0b61"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -527,7 +516,7 @@
         "id": "fjXC0GkLVOyn",
         "outputId": "a0a4eeae-1611-4dd2-b116-c05fb1e8002c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
